--- a/nft-minting-app-main/public/config/config.json
+++ b/nft-minting-app-main/public/config/config.json
@@ -12,7 +12,7 @@
   "WEI_COST": 108000000000000000000,
   "DISPLAY_COST": 108,
   "GAS_LIMIT": 285000,
-  "MARKETPLACE": "Opeansea",
-  "MARKETPLACE_LINK": "https://opensea.io/collection/emocion-nft-club",
+  "MARKETPLACE": "Opensea",
+  "MARKETPLACE_LINK": "https://opensea.io/collection/emocionnftclub",
   "SHOW_BACKGROUND": true
 }
